# agentesupertools

./: .gitignore  INSTRUCTIONS.md  README.md  ROADMAP.md  ROADMAP_REAL_PESSOA_IA.md  ROADMAP_SPRINT.md  agente_super_tools.md  complemento_escopo.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.adapter  Dockerfile.broker  Dockerfile.gateway
docker/itsm-adapter/: Dockerfile
migrations/: 001_initial.sql
src/adapters/itsm/: main.py
src/adapters/observability/: main.py
src/agents/: main.py
src/brokers/: __init__.py  main.py
src/gateways/channel/: main.py
