[project]
name = "agentesupertools"
version = "0.1.0"
description = "Agent Super Tools"
authors = [
    {name = "wildersa"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "fastmcp>=0.9.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "python-json-logger>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
mcp-broker = "src.brokers.main:main"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
